# libdoodle

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: doodle.hpp
include/doodle/: color.hpp  diagram.hpp  export.hpp  flowchart.hpp  plot.hpp  style.hpp  version.hpp
src/: diagram.cpp  flowchart.cpp  gnuplot.cpp  gnuplot.hpp  plot.cpp  svg.cpp  svg.hpp
tests/: test_diagram.cpp  test_flowchart.cpp  test_plot.cpp
